packages/next-swc/crates/core/tests/errors/react-server-components/server-graph/react-dom-api/input.js
import { findDOMNode, flushSync, unstable_batchedUpdates } from 'react-dom'

import {
  experimental_useFormStatus,
  experimental_useFormState,
} from 'react-dom'

export default function () {
  return null
}
